--- a/frontend/travel-app/src/index.css
+++ b/frontend/travel-app/src/index.css
@@ -49,7 +49,7 @@
         @apply text-[22px] text-slate-300 cursor-pointer hover:text-red-500
     }
     .model-box{
-        @apply w-[80vw] md:w-[40%] h-[80vh] bg-white rounded-lg mx-auto mt-14 p-5 overflow-y-scroll scrollbar z-50; 
+        @apply w-[80vw] md:w-[40%] h-[80vh] bg-white relative rounded-lg mx-auto mt-14 overflow-y-scroll scrollbar z-50; 
     }
     .btn-small{
         @apply flex items-center gap-1 text-xs font-medium bg-cyan-50 text-primary shadow-cyan-100/0 border border-cyan-100 hover:bg-primary hover:text-white rounded px-3 py-[3px]
@@ -60,4 +60,5 @@
     .input-label{
         @apply text-xs text-slate-400
     }
+
 }
